Add filtered images for pre-generated plots

--- a/frontend/web/css/rsam.css
+++ b/frontend/web/css/rsam.css
@@ -28,3 +28,9 @@ div.plot{
 select,input,button{
   border-radius: 4px;
 }
+
+table.rsam{
+  max-width: 1200px;
+  width: auto;
+  padding: 10px;
+}
